# app.py
@@ -1,6 +1,8 @@
 from flask import render_template # Remove: import Flask3
 import config
 from models import Trail
+from locations import create, read_one, update, delete
+from trails import validate_auth, read_all, create, read_one, update, delete
 
 app = config.connex_app
 app.add_api(config.basedir / "swagger.yml")
